# docstring-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: args.rs  comment.rs  docstring.rs  filetype.rs  main.rs  tmp.rs
