[package]
name = "docstring-rs"
version = "0.3.0"
authors = [ "Wilhelm Ågren <wilhelmagren98@gmail.com>" ]
description = "📒 Generate or update docstrings for new and existing files. "
readme = "README.md"
homepage = "https://github.com/wilhelmagren/docstring-rs"
repository = "https://github.com/wilhelmagren/docstring-rs"
license-file = "LICENSE"
edition = "2021"
keywords = [ "rust", "cli", "documentation", "automation" ]
categories = [ "command-line-utilities" ]
include = [ "**/*.rs", "Cargo.toml", "LICENSE", "README.md" ]
default-run = "docstring-rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "0.11.2"
glob = "0.3.1"
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.9.6"
text_io = "0.1.12"
